<resources>
    <string name="app_name">BMICalculation</string>
    <string name="input_the_height_here">Input the height here.</string>
    <string name="input_the_weight_here">Input the weight here.</string>
    <string name="weight_kg">weight(kg)</string>
    <string name="bmi_calculation">BMI Calculation</string>
    <string name="see_ur_bmi">See ur BMI</string>
    <string name="height_cm">height(cm)</string>
    <string name="bmi_result">Your bmi result is </string>
    <string name="advice_average">You look great!</string>
    <string name="bmi_picture_for_adult">BMI picture for adult.</string>
    <string name="judge_standard">Judge Standard</string>
    <string name="adult_18_years_old"><![CDATA[adult(> 18 years old)]]></string>
    <string name="child_18_years_old"><![CDATA[child(<= 18 years old)]]></string>
    <string name="choose_the_identity_u_r">Choose the identity u\'r</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>